# ChatRAG

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py  controller.py
src/modules/: llm_factory.py  pdf_loader.py  vector_db.py
